# poc_keycode

./: Cargo.toml  readme.md
data/: code_csv.csv  jis.csv  test.csv
output/: keycode.rs  keycode_2.rs  keycode_3.rs
